@@ -20,8 +20,8 @@ import org.traccar.BaseProtocol;
 import org.traccar.ServerManager;
 import org.traccar.broadcast.BroadcastInterface;
 import org.traccar.broadcast.BroadcastService;
+import org.traccar.command.CommandSender;
 import org.traccar.command.CommandSenderManager;
-import org.traccar.config.Keys;
 import org.traccar.model.Command;
 import org.traccar.model.Device;
 import org.traccar.model.Event;
@@ -45,7 +45,6 @@ import jakarta.inject.Singleton;
 import java.util.Collection;
 import java.util.HashMap;
 import java.util.Map;
-import java.util.stream.Collectors;
 
 @Singleton
 public class CommandsManager implements BroadcastInterface {
@@ -96,9 +95,9 @@ public class CommandsManager implements BroadcastInterface {
                 throw new RuntimeException("Command " + command.getType() + " is not supported");
             }
         } else {
-            String sender = device.getString(Keys.COMMAND_SENDER.getKey());
+            CommandSender sender = commandSenderManager.getSender(device);
             if (sender != null) {
-                commandSenderManager.getSender(sender).sendCommand(device, command);
+                sender.sendCommand(device, command);
             } else {
                 DeviceSession deviceSession = connectionManager.getDeviceSession(deviceId);
                 if (deviceSession != null && deviceSession.supportsLiveCommands()) {
@@ -136,7 +135,7 @@ public class CommandsManager implements BroadcastInterface {
                 events.put(event, null);
             }
             notificationManager.updateEvents(events);
-            return commands.stream().map(QueuedCommand::toCommand).collect(Collectors.toList());
+            return commands.stream().map(QueuedCommand::toCommand).toList();
         } catch (StorageException e) {
             throw new RuntimeException(e);
         }
